--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id=app></div>
-  <script src="/socket"></script>
+  <script src="/socket.io/socket.io.js"></script>
   <!-- vendors must be prior to bundle.js -->
-  <script src="/public/bundle.js"></script>
+  <script src="/bundle.js"></script>
 </body>
