--- a/public/index.html
+++ b/public/index.html
@@ -10,5 +10,5 @@
   <div id=app></div>
   <script src="/socket.io/socket.io.js"></script>
   <!-- vendors must be prior to bundle.js -->
-  <script src="/bundle.js"></script>
+  <script src="/public/bundle.js"></script>
 </body>
