--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,6 @@
   <script src="/socket.io/socket.io.js"></script>
   <!-- vendors must be prior to bundle.js -->
   
-    <script src="/public/bundle.js"></script>
+    <script src="/bundle.js"></script>
   
 </body>
