--- a/public/weibo_video.html
+++ b/public/weibo_video.html
@@ -8,10 +8,15 @@
     <meta property="og:type" content="video"/>
     <meta property="og:title" content="Weibo sample video title" />
     <meta property="og:image" content="http://wsacdn2.miaopai.com/stream/nqVruRH~Ly-bqaW2wQuJfw___tmp_11_154_.jpg">
-    <meta property="og:url" content="http://p.weibo.com/show/nqVruRH~Ly-bqaW2wQuJfw__.htm">
+    <meta property="og:url" content="http://p.weibo.com/show/nqVruRH~Ly-bqaW2wQuJfw__.swf">
     <meta property="og:videosrc" content="http://p.weibo.com/show/nqVruRH~Ly-bqaW2wQuJfw__.swf">
+    <meta property="og:description" content="视频的文字描述" />
+    <meta property="weibo:video:url" content="http://p.weibo.com/show/nqVruRH~Ly-bqaW2wQuJfw__.swf" />
     <meta property="og:width" content="640">
     <meta property="og:height" content="360">
     <!--  end -->
   </head>
+  <body>
+    <embed id="em" src="http://alcdn.static.xiaoka.tv/img/swf/player.swf?scid=M1Wd80KJTHmMdRvv&amp;isNoFirstPlay=1" type="application/x-shockwave-flash" autostart="false" bgcolor="#000000" width="415" height="722" quality="high" allowfullscreen="true" wmode="transparent" allowscriptaccess="always" pluginspage="http://www.macromedia.com/go/getflashplayer" style="width: 10rem;">
+  </body>
 </html>
