--- a/public/weibo_video.html
+++ b/public/weibo_video.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>Weibo sample video</title>
+    <title>OMVT</title>
 
     <!-- weibo meta properties -->
     <meta property="og:type" content="video"/>
