--- a/public/weibo_video.html
+++ b/public/weibo_video.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:wb="http://open.weibo.com/wb">
   <head>
+    <script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js" type="text/javascript" charset="utf-8"></script>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>OMVT</title>
 
@@ -11,12 +12,12 @@
     <meta property="og:url" content="http://p.weibo.com/show/nqVruRH~Ly-bqaW2wQuJfw__.swf">
     <meta property="og:videosrc" content="http://p.weibo.com/show/nqVruRH~Ly-bqaW2wQuJfw__.swf">
     <meta property="og:description" content="视频的文字描述" />
-    <meta property="weibo:video:url" content="http://p.weibo.com/show/nqVruRH~Ly-bqaW2wQuJfw__.swf" />
     <meta property="og:width" content="640">
     <meta property="og:height" content="360">
     <!--  end -->
   </head>
   <body>
     <embed id="em" src="http://alcdn.static.xiaoka.tv/img/swf/player.swf?scid=M1Wd80KJTHmMdRvv&amp;isNoFirstPlay=1" type="application/x-shockwave-flash" autostart="false" bgcolor="#000000" width="415" height="722" quality="high" allowfullscreen="true" wmode="transparent" allowscriptaccess="always" pluginspage="http://www.macromedia.com/go/getflashplayer" style="width: 10rem;">
+      <wb:share-button appkey="3275107201" addition="number" type="button"></wb:share-button>
   </body>
 </html>
