--- a/public/weibo_video.html
+++ b/public/weibo_video.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Weibo sample video title" />
     <meta property="og:image" content="http://wsacdn2.miaopai.com/stream/nqVruRH~Ly-bqaW2wQuJfw___tmp_11_154_.jpg">
     <meta property="og:url" content="http://p.weibo.com/show/nqVruRH~Ly-bqaW2wQuJfw__.swf">
-    <meta property="og:videosrc" content="http://p.weibo.com/show/nqVruRH~Ly-bqaW2wQuJfw__.swf">
+    <meta name="weibo:video:embed_code" content="http://p.weibo.com/show/nqVruRH~Ly-bqaW2wQuJfw__.swf" />
     <meta property="og:description" content="视频的文字描述" />
     <meta property="og:width" content="640">
     <meta property="og:height" content="360">
