--- a/public/weibo_video.html
+++ b/public/weibo_video.html
@@ -6,14 +6,13 @@
     <title>OMVT</title>
 
     <!-- weibo meta properties -->
-    <meta property="og:type" content="video"/>
-    <meta property="og:title" content="Weibo sample video title" />
-    <meta property="og:image" content="http://wsacdn2.miaopai.com/stream/nqVruRH~Ly-bqaW2wQuJfw___tmp_11_154_.jpg">
-    <meta property="og:url" content="http://p.weibo.com/show/nqVruRH~Ly-bqaW2wQuJfw__.swf">
+
+    <meta name ="weibo:type" content="video" />
+    <meta name ="weibo:video:url" content="http://ec2-52-68-174-78.ap-northeast-1.compute.amazonaws.com/weibo_video.html" />
+    <meta name ="weibo:video:title" content="sample video" />
+    <meta name ="weibo:video:description" content="sample video" />
+    <meta name ="weibo:video:image" content="http://wsacdn2.miaopai.com/stream/nqVruRH~Ly-bqaW2wQuJfw___tmp_11_154_.jpg" />
     <meta name="weibo:video:embed_code" content="http://p.weibo.com/show/nqVruRH~Ly-bqaW2wQuJfw__.swf" />
-    <meta property="og:description" content="视频的文字描述" />
-    <meta property="og:width" content="640">
-    <meta property="og:height" content="360">
     <!--  end -->
   </head>
   <body>
