--- a/public/weibo_video.html
+++ b/public/weibo_video.html
@@ -7,12 +7,14 @@
 
     <!-- weibo meta properties -->
 
-    <meta name ="weibo:type" content="video" />
-    <meta name ="weibo:video:url" content="http://ec2-52-68-174-78.ap-northeast-1.compute.amazonaws.com/weibo_video.html" />
-    <meta name ="weibo:video:title" content="sample video" />
-    <meta name ="weibo:video:description" content="sample video" />
-    <meta name ="weibo:video:image" content="http://wsacdn2.miaopai.com/stream/nqVruRH~Ly-bqaW2wQuJfw___tmp_11_154_.jpg" />
-    <meta name="weibo:video:embed_code" content="http://p.weibo.com/show/nqVruRH~Ly-bqaW2wQuJfw__.swf" />
+    <meta property="og:type" content="video"/>
+    <meta property="og:title" content="三杯鸡光想象一下就已经受不了了-魔力美食的秒拍"/>
+    <meta property="og:image" content="http://wsacdn2.miaopai.com/stream/nqVruRH~Ly-bqaW2wQuJfw___tmp_11_154_.jpg"/>
+    <meta property="og:url" content="http://p.weibo.com/show/nqVruRH~Ly-bqaW2wQuJfw__.htm"/>
+    <meta property="og:videosrc" content="http://p.weibo.com/show/nqVruRH~Ly-bqaW2wQuJfw__.swf"/>
+    <meta property="og:width" content="640" />
+    <meta property="og:height" content="360" />
+
     <!--  end -->
   </head>
   <body>
