--- a/public/weibo_video.html
+++ b/public/weibo_video.html
@@ -9,7 +9,7 @@
 
     <meta property="og:type" content="video"/>
     <meta property="og:title" content="三杯鸡光想象一下就已经受不了了-魔力美食的秒拍"/>
-    <meta property="og:image" content="http://wsacdn2.miaopai.com/stream/nqVruRH~Ly-bqaW2wQuJfw___tmp_11_154_.jpg"/>
+    <meta property="og:image" content="https://s.yimg.com/rz/d/yahoo_zh-Hant-HK_f_p_bestfit_2x.png"/>
     <meta property="og:url" content="http://p.weibo.com/show/nqVruRH~Ly-bqaW2wQuJfw__.htm"/>
     <meta property="og:videosrc" content="http://p.weibo.com/show/nqVruRH~Ly-bqaW2wQuJfw__.swf"/>
     <meta property="og:width" content="640" />
