--- a/public/weibo_video.html
+++ b/public/weibo_video.html
@@ -10,8 +10,8 @@
     <meta property="og:type" content="video"/>
     <meta property="og:title" content="三杯鸡光想象一下就已经受不了了-魔力美食的秒拍"/>
     <meta property="og:image" content="https://s.yimg.com/rz/d/yahoo_zh-Hant-HK_f_p_bestfit_2x.png"/>
-    <meta property="og:url" content="http://p.weibo.com/show/nqVruRH~Ly-bqaW2wQuJfw__.htm"/>
-    <meta property="og:videosrc" content="http://p.weibo.com/show/nqVruRH~Ly-bqaW2wQuJfw__.swf"/>
+    <meta property="og:url" content="http://wscdn.miaopai.com/splayer2.1.5.swf?scid=nqVruRH~Ly-bqaW2wQuJfw__&&r=320225"/>
+    <meta property="og:video" content="http://wscdn.miaopai.com/splayer2.1.5.swf?scid=nqVruRH~Ly-bqaW2wQuJfw__&&r=320225"/>
     <meta property="og:width" content="640" />
     <meta property="og:height" content="360" />
 
