--- a/public/weibo.htm
+++ b/public/weibo.htm
@@ -11,7 +11,7 @@
     <meta property="og:title" content="三杯鸡光想象一下就已经受不了了-魔力美食的秒拍!!!"/>
     <meta property="og:image" content="http://p2.sinaimg.cn/1406345553/180/79571458890583"/>
     <meta property="og:url" content="http://wscdn.miaopai.com/splayer2.1.5.swf?scid=nqVruRH~Ly-bqaW2wQuJfw__&&r=320225"/>
-    <meta property="og:video" content="http://wscdn.miaopai.com/splayer2.1.5.swf?scid=nqVruRH~Ly-bqaW2wQuJfw__&&r=320225"/>
+    <meta property="og:videosrc" content="http://wscdn.miaopai.com/splayer2.1.5.swf?scid=nqVruRH~Ly-bqaW2wQuJfw__&&r=320225"/>
     <meta property="og:width" content="640" />
     <meta property="og:height" content="360" />
 
