--- a/public/weibo.htm
+++ b/public/weibo.htm
@@ -7,15 +7,18 @@
 
     <!-- weibo meta properties -->
 
-    <meta property="og:type" content="video"/>
-    <meta property="og:title" content="三杯鸡光想象一下就已经受不了了-魔力美食的秒拍!!!"/>
-    <meta property="og:image" content="http://p2.sinaimg.cn/1406345553/180/79571458890583"/>
-    <meta property="og:url" content="http://wscdn.miaopai.com/splayer2.1.5.swf?scid=nqVruRH~Ly-bqaW2wQuJfw__&&r=320225"/>
-    <meta property="og:videosrc" content="http://wscdn.miaopai.com/splayer2.1.5.swf?scid=nqVruRH~Ly-bqaW2wQuJfw__&&r=320225"/>
-    <meta property="og:width" content="640" />
-    <meta property="og:height" content="360" />
+    <meta property="og:type" content="video" />
+    <meta property="og:url" content="http://video.sina.com.cn/v/b/93544804-2282043583.html" />
+    <meta property="og:title" content="微博UDC圣诞贺岁视频首发" />
+    <meta property="og:description" content="【微博UDC圣诞贺岁视频首发！—微博带你分享微快乐！】还有几个小时，圣诞节就要到啦！末日后的第一个圣诞大家准备怎样度过呢？2012我要新花样！！！！~赶快动手制作一个圣诞 pinhole camera!! 和你最亲近的那个TA一起分享微快乐吧！！！" />
 
     <!--  end -->
+    <meta property="og:image" content="http://ww2.sinaimg.cn/bmiddle/880538bfjw1e04w8ktfakj.jpg " />
+<meta name="weibo:video:embed_code" content="http://you.video.sina.com.cn/api/sinawebApi/outplayrefer.php/vid=93544804_2282043583_OB21THcwCDTK+l1lHz2stqkP7KQNt6nni2K2u1anIAZaQ0/XM5GQYdgD5CHWBNkEqDhATZs6cfou1xk/s.swf" />
+<meta name="weibo:video:stream" content="" />
+<meta name="weibo:video:duration" content="47" />
+<meta name="weibo:video:create_at" content="2012-12-24 16:26:05" />
+<meta name="weibo:video:update_at" content="2012-12-24 16:26:05" />
   </head>
   <body>
     <embed id="em" src="http://alcdn.static.xiaoka.tv/img/swf/player.swf?scid=M1Wd80KJTHmMdRvv&amp;isNoFirstPlay=1" type="application/x-shockwave-flash" autostart="false" bgcolor="#000000" width="415" height="722" quality="high" allowfullscreen="true" wmode="transparent" allowscriptaccess="always" pluginspage="http://www.macromedia.com/go/getflashplayer" style="width: 10rem;">
